public/css/content.less
/* Everything must have a apos- prefix */

@import 'utils.less';
@import 'colors.less';
@import 'icons.less';
@import 'typography.less';

// body {background: red;}

.apos-one-third
{
  width: 33.33333%;
}

.apos-one-half
{
  width: 50%;
}

.apos-two-thirds
{
  width: 66.66667%;
}

.apos-full
{
  width: 100%;
}

.apos-left
{
  float: left;
  clear: both;
  margin-right: 10px;
}

.apos-middle
{
  margin: auto;
  text-align: center;
}

.apos-widget.apos-code pre
{
  text-align: left;
  font-family: Fixed, monospace;
}

.apos-widget.apos-code
{
  text-align: left;
  font-family: Fixed, monospace;
}

.apos-widget.apos-html
{
  text-align: left;
  pre {
    font-family: Fixed, monospace;
  }
  /* Please do not aggressively style anything but pre here. -Tom */
}

.apos-right
{
  float: right;
  clear: both;
  margin-left: 10px;
}

.apos-pullquote
{
  font-size: 135%;
  color: #488;
  line-height: 1.5;
  padding-bottom: 5px;
}

.apos-image img, .apos-video img
{
  width: 100%;
}

.apos-video-thumbnail-wrapper 
{ 
  display: block; 
  background: url('/apos/images/play.png') center center no-repeat; 
}

.apos-video-thumbnail
{
  opacity: .5;
  filter: alpha(opacity=70);
}
.apos-slideshow { position: relative; }
.apos-slideshow .apos-slideshow-items
{
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}
.apos-slideshow .apos-slideshow-item
{
  list-style: none;
  display: none;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
}
.apos-slideshow{overflow: hidden;}
.apos-slideshow .apos-slideshow-image
{
  width: 100%;
}

.apos-slideshow .apos-slideshow-item.apos-current
{
  display: block;
}

.apos-slideshow .apos-slideshow-next,
.apos-slideshow .apos-slideshow-prev
{
  position: absolute;
  top: 50%;
  // background: red;
  height: 50px;
  width: 50px;
  text-indent: -9999px;
  &::after
  {
    top:14px;
    left:0;
    border-top: 3px solid black;
    border-left: 3px solid black;
    content: " ";
    position: absolute;
    width: 15px;
    height: 15px;
  }
  &::before
  {
    border: 3px solid black;
    -webkit-border-radius: 30px;
            border-radius: 30px;
    width: 40px;
    height: 40px;
    position: absolute;
    content: " ";
    display: block;
  }

  &:hover::before
  {
    background-color: RGBA(255,255,255,0.3);
  }
}

.apos-slideshow .apos-slideshow-next
{

   right: 10px;
  &::after
  {
    left: 9px;
    -webkit-transform: rotate(135deg);
       -moz-transform: rotate(135deg);
        -ms-transform: rotate(135deg);
         -o-transform: rotate(135deg);
            transform: rotate(135deg);
  }
}

.apos-slideshow .apos-slideshow-prev
{
  
  left: 10px;
  &::after
  {
    left: 17px;
    -webkit-transform: rotate(-45deg);
       -moz-transform: rotate(-45deg);
        -ms-transform: rotate(-45deg);
         -o-transform: rotate(-45deg);
            transform: rotate(-45deg);
  }
}

/* Areas and singletons are always tall enough to contain their controls */
.apos-area, .apos-singleton
{
  min-height: 50px;
}


.apos-buttons
{
  .apos-buttons-item
  {
    float: left;
    width: auto;
    
    .apos-button-link
    {
     &:hover
     {
      .apos-button-image
      {
        opacity: 0.6;
      }           
     }
    }

    .apos-button-image
    {
      width: 100%;
      min-height: 0px;
      // height: 75px;

      background-size: auto 100%;
      background-position: 0px 50%;
      background-repeat: no-repeat;

      img
      {
        opacity: 0;
        background:white;
        width: auto;
        height: 100%;
      }
    }
  }
}


/*
Below are some basic styles for the map module so it doesn't look totally broken.
They will need to live somewhere else eventually
*/
#map-canvas
{
  // width: 600px;
  // height: 350px;
}

// .map-marker
// {
//   position: absolute;
  
//   &.general
//   { /*  This is general icon points as seen on homepage */
//     height: 20px;
//     width: 20px;
//     background-color: red;
//     border: 5px solid #fff;
//     -webkit-border-radius: 10px;
//             border-radius: 10px;
    
//     box-shadow: 0px 0px 11px #888;
//   }
// }

// MODALS AND DIALOGS
//
// These are not restricted to logged-in users, they do get used in
// other situations

.apos-modal .apos-modal-body
{
  // max-height: 450px;
}

.apos-modal-body .apos-fieldset
{
  margin-bottom: 20px;
  .clearfix;

  label { display: inline-block; }
}

.apos-hr
{
  margin: 10px 0;
  border-top: 1px solid @apos-grey60;
}

.apos-modal-body .apos-hr
{
  margin: 15px 0px 20px;
}

.apos-fieldset-text
{
  input, textarea
  {
    display: block;
    width: 100%;
    max-width: 385px;
    padding: 8px 8px 10px 8px;
    border: none;
  }
  textarea {height: 180px;}
}

.apos-fieldset-radio
{
  input
  {
    margin-left: 10px;
  }
}

.apos-fieldset-select
{
  .apos-menu-style
  {
    float:none;
    padding: 0px 20px 0 0;
    display: inline-block;
  }
  select { padding: 10px; }
}

.apos-fieldset-typeahead
{
  .ui-sortable
  {
    li
    {
      background-color: lighten(@apos-base, 30%);
      padding: 10px 0;
      border-bottom: 1px solid lighten(@apos-base, 35%);
      text-transform: uppercase;
      color: @apos-grey20;
      letter-spacing: 1px;
      font-size: 11px;

      &:hover{ cursor: move}
      &:focus, &:active{ background-color: lighten(@apos-base, 10%);}
    }
  }

  .apos-remove
  {
    background-color: lighten(@apos-base, 15%);
    padding: 9px 8px;
    margin-right: 5px;
    color: #FFF;
    &:hover{cursor: pointer; background-color: darken(@apos-base, 10%); text-decoration: none;}
  }
}

.apos-fieldset-singleton
{
  label
  {
    float: left;
  }
  .apos-area-controls
  {
    position: relative;
    top: inherit;
    left: inherit;
  }
  .apos-slideshow
  {
    max-width: 300px;
    margin: inherit;
  }
}

.apos-fieldset-icon
{
  height: 50px;
  label
  {
    visibility: hidden;
    width: 0px;
    &:before
    {
      visibility: visible;
      color: lighten(@apos-grey, 15%);
      width: auto;
      padding: 12px 14px;
      background: lighten(@apos-grey, 75%);
      font-size: 1.2em;
      width: 14px
    }
  }
  input
  {
    display: inline;
    width: inherit;
    -webkit-appearance: none;
    border: 0;
    background-color: #FFF !important;
    height: 39px;
    position: relative;
    top: -3px;
    left: -10px;
    width: 266px;
    &:focus{border:none; outline: none; background-color: #FFF;}
  }
  input:-webkit-autofill {
        -webkit-box-shadow: 0 0 0px 1000px white inset;
    }

}

.apos-fieldset-editor
{
  background-color: inherit;
  label
  {
    float:left;
    display: inline-block;
  }
  > div
  {
    float: left;
    width: 100%;
  }
  textarea
  {
    width: 80%;
    border: 0;
    min-height: 180px;
  }
  textarea{display: block; clear: both;}
}

.apos-modal .apos-modal-body .apos-position input,
.apos-modal .apos-modal-body .apos-size input
{
  margin-left: 10px;
  margin-right: 10px;
}

.apos-modal .apos-modal-footer
{
  margin-top: 10px;
}


.apos-modal-blackout
{
  background-color: black;
  opacity: 0.6;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0px;
  left: 0px;
  // Just below first modal, do not use >= 899 for other things please
  z-index: 899;
}

.apos-modal
{
  top: 100px;
  position: absolute;
  width: 800px;
  background-color: #ddd;
  opacity: 1.0;
  // Do not use >= 899 for other things please
  z-index: 900;
  // padding: 10px;
  * {.apos-montserrat; color: @apos-grey;}
  strong {.apos-montserrat-bold;}
  .apos-button{color: #FFF;}
  h3
  {
    background: @apos-base;
    color: #fff;
    padding: 15px;
    margin-bottom: 0px;

    font-size: 10px;

    letter-spacing: 1px;
    text-transform: uppercase;
  }

  .apos-modal-body
  {
    padding: 15px;

    .apos-instructions
    {
      display: block;
      margin-bottom: 20px;
      line-height: 1.4em;
    }

    form
    {
      input
      {
        border: none;
      }

      label
      {
        color: @apos-grey10;
        letter-spacing: 1px;
        background: @apos-grey60;
        padding: 9px 12px;
        font-size: 12px;
        font-family: 'cabinbold';
        text-transform: uppercase;
        font-size: 10px;
        &.short
        {
          display: inline-block;
          .clearfix;
        }
      }


      select
      {
        position: relative;
        -webkit-appearance:none;
           -moz-appearance:none;
        border: none;
        background: @apos-base;
        border-radius: 0px;
        color: #FFF;


        option
        {
          &:hover
          {
            background: red;
          }
        }
      }

      input, select, option
      {
        &:focus
        {
          outline: none;
        }
      }
      .apos-stacked-fieldset
      {
        background-color: transparent;
        label
        {
          display: inline-block;
        }
        input, textarea
        {
          max-width: none;
          width: 100%;
          margin-left: 0;
          outline:none;
          border:none;
        }
        textarea
        {
          height: 180px;
        }
      }
    }
  }

  .apos-modal-footer
  {
    padding: 15px;
    .clearfix;

    .apos-modal-footer-buttons
    {
      float: right;
    }

    .apos-button
    {
      font-family: 'cabin';
      font-size:10px;
      letter-spacing: 2px;
      text-transform: uppercase;
      padding: 10px 25px;
    }
  }
  // padding: 10px;
  // border: 3px solid #ccc;
  // color: black;
}

// Originally from snippet filters but now available in the form macros

.apos-pill
{
  margin-right: 20px;
}

.apos-pill-choice
{
  padding: 6px;
  background-color: #fed;
  border: 1px solid #edc;
  border-right: none;
  &.apos-first
  {
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
  }
  &.apos-last
  {
    border-right: 1px solid #edc;
    border-top-right-radius: 6px;
    border-bottom-right-radius: 6px;
  }
  &.apos-active
  {
    background-color: white;
  }
}

// Login screen
// Should probably have some sort of internal admin view stylesheet

.apos-login
{
  background-color: @apos-grey-light;
  .content .main
  {
    max-width: 100%;
    text-align: center;
    min-height: 0px;
  }
  .apos-login-inner
  {
    padding: 15px;
  }
  .appy-login
  {
    .apos-modal;
    position: relative;
    text-align: left;
    width: 350px;
    margin: 0 auto;
    height: 210px;

    .apos-control
    {
      float: right;
      margin-right: 12px;
    }

  }

}

